# versionizer

./: .gitmodules  CMakeLists.txt
include/: versionizer.hpp
src/: main.cpp  versionizer.cpp
test/: CMakeLists.txt  unit-versionizer.cpp
